--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^2.2.0
   google_fonts: ^6.3.0
   get: ^4.7.2
+  svg_provider: ^1.0.1
+  get_storage: ^2.1.1
 
 dev_dependencies:
   flutter_test:
